--- a/packages/editor/editor-mobile-bridge/public/editor.html.ejs
+++ b/packages/editor/editor-mobile-bridge/public/editor.html.ejs
@@ -254,6 +254,11 @@
       font-family: "SFMono-Medium", "SF Mono", "Segoe UI Mono", "Roboto Mono", "Ubuntu Mono", Menlo, Courier, monospace;
     }
 
+    .pm-table-wrapper, .code-block {
+      -webkit-overflow-scrolling : touch !important;
+      overflow: auto !important;
+    }
+
     var,
     address,
     dfn,
